--- a/shop-BE-main/.env
+++ b/shop-BE-main/.env
@@ -9,4 +9,4 @@ TIME_SECRET=1h
 vnp_TmnCode =NIB49L9F
 vnp_HashSecret =KRXTUYZLPMHPJKDEBJCJHKEWUCAEURAX
 vnp_ReturnUrl =https://localhost:3000/user/order
-vnp_Url =http://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnp_Url =https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
