--- a/shop-BE-main/.env
+++ b/shop-BE-main/.env
@@ -3,10 +3,10 @@ DATABASE__URL='mongodb+srv://nhoxbuonlv3:1234@shop.pobz4.mongodb.net/book_store1
 email_username=nhoxbuonlv3@gmail.com
 email_password=iihesjfmungtnyhq
 url_verifyEmail=http://localhost:8080/api/auth/accountVerification/
-url_changePassword = https://localhost:3000/forgot/
+url_changePassword = http://localhost:3000/forgot/
 SECRETKEY=hasagi
 TIME_SECRET=1h
 vnp_TmnCode =NIB49L9F
 vnp_HashSecret =KRXTUYZLPMHPJKDEBJCJHKEWUCAEURAX
-vnp_ReturnUrl =https://localhost:3000/user/order
+vnp_ReturnUrl =http://localhost:3000/user/order
 vnp_Url =http://sandbox.vnpayment.vn/paymentv2/vpcpay.html
