--- a/shop-BE-main/package.json
+++ b/shop-BE-main/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "config": "^3.3.6",
+    "config": "^1.31.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dateformat": "^4.5.1",
-    "debug": "~2.6.9",
+    "dateformat": "^2.2.0",
+    "debug": "^3.2.6",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.9",
     "qs": "^6.10.1",
     "randomstring": "^1.2.1",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "md5": "^2.2.1"
   }
 }
